I've made a lot of changes lately to the audio system.  There are a few caveats I am working through, like audio filter popping and transcode glitches as well.